crates/infrastructure/tests/violations/infra_imports_domain.stderr
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `ckeletin_domain`
 --> tests/violations/infra_imports_domain.rs:5:5
  |
5 | use ckeletin_domain::ping::PingResult;
  |     ^^^^^^^^^^^^^^^ use of unresolved module or unlinked crate `ckeletin_domain`
  |
  = help: if you wanted to use a crate named `ckeletin_domain`, use `cargo add ckeletin_domain` to add it to your `Cargo.toml`
